--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,5 @@
 
 include README.md
 recursive-include ddd/management/templates *.txt
+recursive-include ddd/management/templates *.html
+recursive-include ddd/management/templates *.py
